--- a/Dependencies.toml
+++ b/Dependencies.toml
@@ -12,10 +12,140 @@ name = "auth"
 version = "2.5.0"
 dependencies = [
 	{org = "ballerina", name = "crypto"},
+	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "lang.array"},
 	{org = "ballerina", name = "lang.string"},
-	{org = "ballerina", name = "regex"},
 	{org = "ballerina", name = "log"},
+	{org = "ballerina", name = "regex"}
+]
+
+[[package]]
+org = "ballerina"
+name = "cache"
+version = "3.3.0"
+dependencies = [
+	{org = "ballerina", name = "constraint"},
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "task"},
+	{org = "ballerina", name = "time"}
+]
+
+[[package]]
+org = "ballerina"
+name = "constraint"
+version = "1.0.1"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"}
+]
+
+[[package]]
+org = "ballerina"
+name = "crypto"
+version = "2.3.0"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "time"}
+]
+
+[[package]]
+org = "ballerina"
+name = "file"
+version = "1.5.0"
+dependencies = [
+	{org = "ballerina", name = "io"},
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "log"},
+	{org = "ballerina", name = "os"},
+	{org = "ballerina", name = "regex"},
+	{org = "ballerina", name = "time"}
+]
+
+[[package]]
+org = "ballerina"
+name = "http"
+version = "2.5.2"
+dependencies = [
+	{org = "ballerina", name = "auth"},
+	{org = "ballerina", name = "cache"},
+	{org = "ballerina", name = "constraint"},
+	{org = "ballerina", name = "crypto"},
+	{org = "ballerina", name = "file"},
+	{org = "ballerina", name = "io"},
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "jwt"},
+	{org = "ballerina", name = "lang.array"},
+	{org = "ballerina", name = "lang.decimal"},
+	{org = "ballerina", name = "lang.int"},
+	{org = "ballerina", name = "lang.runtime"},
+	{org = "ballerina", name = "lang.string"},
+	{org = "ballerina", name = "lang.value"},
+	{org = "ballerina", name = "log"},
+	{org = "ballerina", name = "mime"},
+	{org = "ballerina", name = "oauth2"},
+	{org = "ballerina", name = "observe"},
+	{org = "ballerina", name = "regex"},
+	{org = "ballerina", name = "time"},
+	{org = "ballerina", name = "url"}
+]
+modules = [
+	{org = "ballerina", packageName = "http", moduleName = "http"}
+]
+
+[[package]]
+org = "ballerina"
+name = "io"
+version = "1.3.1"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "lang.value"}
+]
+modules = [
+	{org = "ballerina", packageName = "io", moduleName = "io"}
+]
+
+[[package]]
+org = "ballerina"
+name = "jballerina.java"
+version = "0.0.0"
+
+[[package]]
+org = "ballerina"
+name = "jwt"
+version = "2.5.0"
+dependencies = [
+	{org = "ballerina", name = "cache"},
+	{org = "ballerina", name = "crypto"},
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "lang.int"},
+	{org = "ballerina", name = "lang.string"},
+	{org = "ballerina", name = "log"},
+	{org = "ballerina", name = "regex"},
+	{org = "ballerina", name = "time"}
+]
+
+[[package]]
+org = "ballerina"
+name = "lang.__internal"
+version = "0.0.0"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "lang.object"}
+]
+
+[[package]]
+org = "ballerina"
+name = "lang.array"
+version = "0.0.0"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "lang.__internal"}
+]
+
+[[package]]
+org = "ballerina"
+name = "lang.decimal"
+version = "0.0.0"
+dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
 ]
 
@@ -29,156 +159,32 @@ dependencies = [
 
 [[package]]
 org = "ballerina"
-name = "lang.__internal"
-version = "0.0.0"
-dependencies = [
-	{org = "ballerina", name = "lang.object"},
-	{org = "ballerina", name = "jballerina.java"}
-]
-
-[[package]]
-org = "ballerina"
-name = "mime"
-version = "2.5.1"
-dependencies = [
-	{org = "ballerina", name = "lang.int"},
-	{org = "ballerina", name = "io"},
-	{org = "ballerina", name = "jballerina.java"}
-]
-
-[[package]]
-org = "ballerina"
-name = "log"
-version = "2.5.1"
-dependencies = [
-	{org = "ballerina", name = "observe"},
-	{org = "ballerina", name = "io"},
-	{org = "ballerina", name = "lang.value"},
-	{org = "ballerina", name = "jballerina.java"}
-]
-modules = [
-	{org = "ballerina", packageName = "log", moduleName = "log"}
-]
-
-[[package]]
-org = "ballerina"
-name = "uuid"
-version = "1.4.0"
-dependencies = [
-	{org = "ballerina", name = "crypto"},
-	{org = "ballerina", name = "lang.int"},
-	{org = "ballerina", name = "time"},
-	{org = "ballerina", name = "regex"},
-	{org = "ballerina", name = "jballerina.java"}
-]
-
-[[package]]
-org = "ballerina"
-name = "os"
-version = "1.5.0"
-dependencies = [
-	{org = "ballerina", name = "io"},
-	{org = "ballerina", name = "jballerina.java"}
-]
-
-[[package]]
-org = "ballerina"
-name = "jwt"
-version = "2.5.0"
-dependencies = [
-	{org = "ballerina", name = "cache"},
-	{org = "ballerina", name = "crypto"},
-	{org = "ballerina", name = "lang.int"},
-	{org = "ballerina", name = "lang.string"},
-	{org = "ballerina", name = "time"},
-	{org = "ballerina", name = "regex"},
-	{org = "ballerina", name = "log"},
-	{org = "ballerina", name = "jballerina.java"}
-]
-
-[[package]]
-org = "ballerina"
-name = "crypto"
-version = "2.3.0"
-dependencies = [
-	{org = "ballerina", name = "time"},
-	{org = "ballerina", name = "jballerina.java"}
-]
-
-[[package]]
-org = "ballerina"
-name = "observe"
-version = "1.0.6"
-dependencies = [
-	{org = "ballerina", name = "jballerina.java"}
-]
-
-[[package]]
-org = "ballerina"
-name = "io"
-version = "1.3.1"
-dependencies = [
-	{org = "ballerina", name = "lang.value"},
-	{org = "ballerina", name = "jballerina.java"}
-]
-modules = [
-	{org = "ballerina", packageName = "io", moduleName = "io"}
-]
-
-[[package]]
-org = "ballerina"
-name = "jballerina.java"
+name = "lang.object"
 version = "0.0.0"
 
 [[package]]
 org = "ballerina"
-name = "cache"
-version = "3.3.0"
+name = "lang.regexp"
+version = "0.0.0"
 dependencies = [
-	{org = "ballerina", name = "task"},
-	{org = "ballerina", name = "time"},
+	{org = "ballerina", name = "jballerina.java"}
+]
+
+[[package]]
+org = "ballerina"
+name = "lang.runtime"
+version = "0.0.0"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"}
+]
+
+[[package]]
+org = "ballerina"
+name = "lang.string"
+version = "0.0.0"
+dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
-	{org = "ballerina", name = "constraint"}
-]
-
-[[package]]
-org = "wso2healthcare"
-name = "healthcare.fhir.r4"
-version = "0.1.7"
-dependencies = [
-	{org = "ballerina", name = "io"},
-	{org = "ballerina", name = "time"},
-	{org = "ballerina", name = "regex"},
-	{org = "ballerina", name = "log"},
-	{org = "ballerina", name = "lang.value"},
-	{org = "ballerina", name = "uuid"},
-	{org = "wso2healthcare", name = "healthcare.base"},
-	{org = "ballerina", name = "http"},
-	{org = "ballerina", name = "jwt"}
-]
-modules = [
-	{org = "wso2healthcare", packageName = "healthcare.fhir.r4", moduleName = "healthcare.fhir.r4"}
-]
-
-[[package]]
-org = "ballerina"
-name = "file"
-version = "1.5.0"
-dependencies = [
-	{org = "ballerina", name = "io"},
-	{org = "ballerina", name = "time"},
-	{org = "ballerina", name = "regex"},
-	{org = "ballerina", name = "log"},
-	{org = "ballerina", name = "os"},
-	{org = "ballerina", name = "jballerina.java"}
-]
-
-[[package]]
-org = "ballerina"
-name = "time"
-version = "2.2.3"
-dependencies = [
-	{org = "ballerina", name = "jballerina.java"}
+	{org = "ballerina", name = "lang.regexp"}
 ]
 
 [[package]]
@@ -193,49 +199,80 @@ modules = [
 ]
 
 [[package]]
-org = "wso2healthcare"
-name = "healthcare.base"
-version = "0.1.2"
-dependencies = [
-	{org = "ballerina", name = "io"},
-	{org = "ballerina", name = "log"}
-]
-
-[[package]]
 org = "ballerina"
-name = "http"
-version = "2.5.2"
+name = "log"
+version = "2.5.1"
 dependencies = [
-	{org = "ballerina", name = "auth"},
-	{org = "ballerina", name = "file"},
-	{org = "ballerina", name = "cache"},
-	{org = "ballerina", name = "lang.int"},
-	{org = "ballerina", name = "time"},
-	{org = "ballerina", name = "mime"},
-	{org = "ballerina", name = "log"},
-	{org = "ballerina", name = "lang.value"},
-	{org = "ballerina", name = "lang.runtime"},
-	{org = "ballerina", name = "url"},
-	{org = "ballerina", name = "jwt"},
-	{org = "ballerina", name = "constraint"},
-	{org = "ballerina", name = "crypto"},
-	{org = "ballerina", name = "lang.array"},
-	{org = "ballerina", name = "observe"},
-	{org = "ballerina", name = "lang.string"},
 	{org = "ballerina", name = "io"},
-	{org = "ballerina", name = "regex"},
-	{org = "ballerina", name = "lang.decimal"},
 	{org = "ballerina", name = "jballerina.java"},
-	{org = "ballerina", name = "oauth2"}
+	{org = "ballerina", name = "lang.value"},
+	{org = "ballerina", name = "observe"}
 ]
 modules = [
-	{org = "ballerina", packageName = "http", moduleName = "http"}
+	{org = "ballerina", packageName = "log", moduleName = "log"}
 ]
 
 [[package]]
 org = "ballerina"
-name = "lang.runtime"
-version = "0.0.0"
+name = "mime"
+version = "2.5.1"
+dependencies = [
+	{org = "ballerina", name = "io"},
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "lang.int"}
+]
+
+[[package]]
+org = "ballerina"
+name = "oauth2"
+version = "2.5.0"
+dependencies = [
+	{org = "ballerina", name = "cache"},
+	{org = "ballerina", name = "crypto"},
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "log"},
+	{org = "ballerina", name = "time"}
+]
+
+[[package]]
+org = "ballerina"
+name = "observe"
+version = "1.0.6"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"}
+]
+
+[[package]]
+org = "ballerina"
+name = "os"
+version = "1.5.0"
+dependencies = [
+	{org = "ballerina", name = "io"},
+	{org = "ballerina", name = "jballerina.java"}
+]
+
+[[package]]
+org = "ballerina"
+name = "regex"
+version = "1.3.2"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "lang.string"}
+]
+
+[[package]]
+org = "ballerina"
+name = "task"
+version = "2.3.0"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "time"}
+]
+
+[[package]]
+org = "ballerina"
+name = "time"
+version = "2.2.3"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
 ]
@@ -250,88 +287,26 @@ dependencies = [
 
 [[package]]
 org = "ballerina"
-name = "constraint"
-version = "1.0.1"
+name = "uuid"
+version = "1.4.0"
 dependencies = [
-	{org = "ballerina", name = "jballerina.java"}
+	{org = "ballerina", name = "crypto"},
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "lang.int"},
+	{org = "ballerina", name = "regex"},
+	{org = "ballerina", name = "time"}
 ]
-
-[[package]]
-org = "ballerina"
-name = "lang.array"
-version = "0.0.0"
-dependencies = [
-	{org = "ballerina", name = "lang.__internal"},
-	{org = "ballerina", name = "jballerina.java"}
-]
-
-[[package]]
-org = "ballerina"
-name = "task"
-version = "2.3.0"
-dependencies = [
-	{org = "ballerina", name = "time"},
-	{org = "ballerina", name = "jballerina.java"}
-]
-
-[[package]]
-org = "ballerina"
-name = "lang.string"
-version = "0.0.0"
-dependencies = [
-	{org = "ballerina", name = "lang.regexp"},
-	{org = "ballerina", name = "jballerina.java"}
-]
-
-[[package]]
-org = "ballerina"
-name = "lang.object"
-version = "0.0.0"
 
 [[package]]
 org = "ballerinai"
 name = "observe"
 version = "0.0.0"
 dependencies = [
-	{org = "ballerina", name = "observe"},
-	{org = "ballerina", name = "jballerina.java"}
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "observe"}
 ]
-
-[[package]]
-org = "ballerina"
-name = "regex"
-version = "1.3.2"
-dependencies = [
-	{org = "ballerina", name = "lang.string"},
-	{org = "ballerina", name = "jballerina.java"}
-]
-
-[[package]]
-org = "ballerina"
-name = "lang.decimal"
-version = "0.0.0"
-dependencies = [
-	{org = "ballerina", name = "jballerina.java"}
-]
-
-[[package]]
-org = "ballerina"
-name = "lang.regexp"
-version = "0.0.0"
-dependencies = [
-	{org = "ballerina", name = "jballerina.java"}
-]
-
-[[package]]
-org = "ballerina"
-name = "oauth2"
-version = "2.5.0"
-dependencies = [
-	{org = "ballerina", name = "cache"},
-	{org = "ballerina", name = "crypto"},
-	{org = "ballerina", name = "time"},
-	{org = "ballerina", name = "log"},
-	{org = "ballerina", name = "jballerina.java"}
+modules = [
+	{org = "ballerinai", packageName = "observe", moduleName = "observe"}
 ]
 
 [[package]]
@@ -339,14 +314,45 @@ org = "wso2healthcare"
 name = "PatientAPI"
 version = "0.1.5"
 dependencies = [
-	{org = "wso2healthcare", name = "healthcare.fhir.r4"},
+	{org = "ballerina", name = "http"},
 	{org = "ballerina", name = "io"},
-	{org = "ballerinai", name = "observe"},
-	{org = "ballerina", name = "log"},
 	{org = "ballerina", name = "lang.value"},
-	{org = "ballerina", name = "http"}
+	{org = "ballerina", name = "log"},
+	{org = "ballerinai", name = "observe"},
+	{org = "wso2healthcare", name = "healthcare.fhir.r4"}
 ]
 modules = [
-	{org = "wso2healthcare", packageName = "PatientAPI", moduleName = "PatientAPI.fhir.r4.api.patient"}
+	{org = "wso2healthcare", packageName = "PatientAPI", moduleName = "PatientAPI"}
 ]
+
+[[package]]
+org = "wso2healthcare"
+name = "healthcare.base"
+version = "0.1.2"
+dependencies = [
+	{org = "ballerina", name = "io"},
+	{org = "ballerina", name = "log"}
+]
+
+[[package]]
+org = "wso2healthcare"
+name = "healthcare.fhir.r4"
+version = "0.1.7"
+dependencies = [
+	{org = "ballerina", name = "http"},
+	{org = "ballerina", name = "io"},
+	{org = "ballerina", name = "jwt"},
+	{org = "ballerina", name = "lang.value"},
+	{org = "ballerina", name = "log"},
+	{org = "ballerina", name = "regex"},
+	{org = "ballerina", name = "time"},
+	{org = "ballerina", name = "uuid"},
+	{org = "wso2healthcare", name = "healthcare.base"}
+]
+modules = [
+	{org = "wso2healthcare", packageName = "healthcare.fhir.r4", moduleName = "healthcare.fhir.r4"},
+	{org = "wso2healthcare", packageName = "healthcare.fhir.r4", moduleName = "healthcare.fhir.r4.parser"},
+	{org = "wso2healthcare", packageName = "healthcare.fhir.r4", moduleName = "healthcare.fhir.r4.terminology"}
+]
+
 
